FEAT: add webcam :tada::tada::tada:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <!-- <app-welcome></app-welcome> -->
   <app-home></app-home>
   <!-- <app-grass></app-grass> -->
+  <app-webcam-new></app-webcam-new>
 </div>
