--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,42 +6,42 @@
         <div class="row no-gutters">
             <img
                 src="../../assets/Anger.svg"
-                [style.transform]="'scale(' + (finalEmotion.anger ? finalEmotion.anger : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.anger ? finalEmotion.anger : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Contempt.svg"
-                [style.transform]="'scale(' + (finalEmotion.contempt ? finalEmotion.contempt : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.contempt ? finalEmotion.contempt : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Happy.svg"
-                [style.transform]="'scale(' + (finalEmotion.happiness ? finalEmotion.happiness : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.happiness ? finalEmotion.happiness : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Disgust.svg"
-                [style.transform]="'scale(' + (finalEmotion.disgust ? finalEmotion.disgust : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.disgust ? finalEmotion.disgust : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Sad.svg"
-                [style.transform]="'scale(' + (finalEmotion.sadness ? finalEmotion.sadness : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.sadness ? finalEmotion.sadness : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Surprised.svg"
-                [style.transform]="'scale(' + (finalEmotion.surprise ? finalEmotion.surprise : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.surprise ? finalEmotion.surprise : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Neutral.svg"
-                [style.transform]="'scale(' + (finalEmotion.neutral ? finalEmotion.neutral : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.neutral ? finalEmotion.neutral : 0) + ')'"
                 style="transform-origin: bottom;"
             >
             <img
                 src="../../assets/Fear.svg"
-                [style.transform]="'scale(' + (finalEmotion.fear ? finalEmotion.fear : 0) + ')'"
+                [style.transform]="'scale(' + (finalEmotion && finalEmotion.fear ? finalEmotion.fear : 0) + ')'"
                 style="transform-origin: bottom;"
             >
         </div>
