FIX: Update from UI feedback

--- a/src/app/webcam-new/webcam-new.component.html
+++ b/src/app/webcam-new/webcam-new.component.html
@@ -13,11 +13,11 @@
     >
         Take A Snapshot
     </button>
-    <div
+    <!-- <div
         class="snapshot"
         *ngIf="webcamImage"
     >
         <h2>Nice one!</h2>
         <img [src]="webcamImage.imageAsDataUrl">
-    </div>
+    </div> -->
 </div>
