--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -10,10 +10,9 @@
   </div>
   <div class="row">
     <div class="col-5">
-    <!-- <div class="col"> -->
     </div>
     <div class="col align-items-center">
-      <a href="#" class="action-button shadow animate blue">Enter</a>
+      <button (click)="onClick()" class="action-button shadow animate blue">Enter</button>
     </div>
     <div class="col">
     </div>
