--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-/* body {
+body {
   background: #F94F6A;
   -webkit-font-smoothing: antialiased !important;
   webkit-text-stroke: 1px rgba(0,0,0,0.1);
-} */
+}
